# right-click-wsl-path

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/brainstorms/: 2026-06-14-wsl-path-context-menu-requirements.md
docs/plans/: 2026-06-14-001-feat-wsl-path-context-menu-plan.md
packaging/: AppxManifest.xml  classic-install.reg  install-classic.ps1  register.ps1  uninstall-classic.ps1  unregister.ps1
src/cli/: main.cpp
src/core/: Clipboard.cpp  Clipboard.h  PathConverter.cpp  PathConverter.h  WslProcess.cpp  WslProcess.h
src/handler/: ExplorerCommand.cpp  ExplorerCommand.h  dllmain.cpp  handler.def
test/: core_tests.cpp
